Contact avatars are now downloaded automatically without having to open chat window Adds a patch on the jml lib that prevents us from sending more than 8 dashboards per minute Also, fixes a few exceptions that were occurring on exit.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4422 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/logging.properties
+++ b/lib/logging.properties
@@ -62,7 +62,7 @@ net.sf.cindy.impl.level = SEVERE
 
 # But we want everything coming from the sip-comm
 net.java.sip.communicator.level = WARNING
-net.java.sip.communicator.impl.protocol.rss.level = FINER
+net.java.sip.communicator.impl.contactlist.level = FINEST
 
 # For example, set the com.xyz.foo logger to only log SEVERE
 # messages:
