- Added some new color constants. - Added set/getSize and set/getLocation methods to the UIService.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4425 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/colors/colors.properties
+++ b/resources/colors/colors.properties
@@ -124,6 +124,14 @@ toolBarForeground=FFFFFF
 # Initial account registration protocol panel background.
 accountRegistrationBackground=C2CEE0
 
+# Contact list contact row color.
 contactListRowColor=e8e9ef
 
+# Contact list group row color.
 contactListGroupRowColor=C2CEE0
+
+# Contact list gradient group color.
+contactListGroupGradientColor=C2CEE0
+
+# Main window background color.
+mainWindowBackground=FAFAFA
