--- a/resources/config/defaults.properties
+++ b/resources/config/defaults.properties
@@ -7,6 +7,7 @@ net.java.sip.communicator.impl.gui.isMessageHistoryShown=true
 net.java.sip.communicator.impl.gui.messageHistorySize=10
 net.java.sip.communicator.impl.gui.isTransparentWindowEnabled=false
 net.java.sip.communicator.impl.gui.windowTransparency=180
+net.java.sip.communicator.impl.gui.isWindowDecorated=true
 
 applicationName=SIP Communicator
 applicationWebSite=http://sip-communicator.org
