Configurable main window border.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4427 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/config/defaults.properties
+++ b/resources/config/defaults.properties
@@ -30,6 +30,7 @@ dialPadWidth=150
 dialPadHeight=150
 dialPadHorizontalGap=5
 dialPadVerticalGap=5
+mainWindowBorderSize=0
 
 isTextureBackground=false
 
