Change some texts in izpack welcome page.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4441 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/ant-build-config.properties
+++ b/resources/install/ant-build-config.properties
@@ -2,3 +2,6 @@ application.name=SIP Communicator
 application.web=http://sip-communicator.org/
 application.email=sc@sip-communicator.org
 package.name=sip-communicator
+installer.welcome.developedby=This software is developed by: SIP Communicator <sc@sip-communicator.org>
+installer.welcome.url=The homepage is at: http://sip-communicator.org/
+installer.welcome.poweredby=
