--- a/resources/install/ant-build-config.properties
+++ b/resources/install/ant-build-config.properties
@@ -2,6 +2,6 @@ application.name=SIP Communicator
 application.web=http://sip-communicator.org/
 application.email=sc@sip-communicator.org
 package.name=sip-communicator
-installer.welcome.developedby=This software is developed by: SIP Communicator <sc@sip-communicator.org>
-installer.welcome.url=The homepage is at: http://sip-communicator.org/
-installer.welcome.poweredby=
+installer.welcome.wtext1=This software is developed by: SIP Communicator <sc@sip-communicator.org>
+installer.welcome.wtext2=The homepage is at: http://sip-communicator.org/
+installer.welcome.wtext3=
