--- a/resources/config/defaults.properties
+++ b/resources/config/defaults.properties
@@ -31,6 +31,7 @@ dialPadHeight=150
 dialPadHorizontalGap=5
 dialPadVerticalGap=5
 mainWindowBorderSize=0
+contactListRowTransparency=200
 
 isTextureBackground=false
 
