Reenabling all unit tests
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4461 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/testing.properties
+++ b/lib/testing.properties
@@ -2,7 +2,19 @@
 # environment when running automated testing.
 
 # A list of all tests that should be run by the test target of the project.
-net.java.sip.communicator.slick.runner.TEST_LIST=JabberProtocolProviderSlick 
+net.java.sip.communicator.slick.runner.TEST_LIST=ConfigurationServiceLick \
+ MetaContactListServiceLick \
+ NetworkAddressManagerServiceLick \
+ FileAccessServiceLick \
+ HistoryServiceLick \
+ SlicklessTests \
+ MsgHistoryServiceLick \
+ CallHistoryServiceLick \
+ JabberProtocolProviderSlick \
+ YahooProtocolProviderSlick \
+ MsnProtocolProviderSlick \
+ GibberishProtocolProviderServiceLick \
+ RssProtocolProviderServiceLick
 
 # MediaServiceLick \
 # SipProtocolProviderServiceLick \
