--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -59,6 +59,7 @@ felix.auto.start.3= \
 felix.auto.start.4= \
  reference:file:sc-bundles/configuration.jar \
  reference:file:sc-bundles/ui-service.jar \
+ reference:file:sc-bundles/argdelegation-service.jar \
  reference:file:sc-bundles/resourcemanager.jar \
  reference:file:sc-bundles/defaultresources.jar \
  reference:file:sc-bundles/jfontchooserlib.jar \
