Remove the pack() from the parent customization window and leave all windows to choose their setSize method.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4468 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/config/defaults.properties
+++ b/resources/config/defaults.properties
@@ -21,7 +21,9 @@ defaultGroupName=
 preferredAccountWizard=
 tabOverlap=10
 mainWindowWidth=200
-mainWindowHeight=450
+mainWindowHeight=500
+chatWindowWidth=500
+chatWindowHeight=400
 logoBarWidth=0
 logoBarHeight=0
 mainToolbarButtonHeight=28
