Implements a build-installation-wix target which produces a MSI package using WiX 3.0 installed in C:\Program Files\WiX.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4471 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/ant-build-config.properties
+++ b/resources/install/ant-build-config.properties
@@ -5,3 +5,4 @@ package.name=sip-communicator
 installer.welcome.wtext1=This software is developed by: SIP Communicator <sc@sip-communicator.org>
 installer.welcome.wtext2=The homepage is at: http://sip-communicator.org/
 installer.welcome.wtext3=
+wix.upgrade.code=B3854E66-BAE5-409F-B5EB-7649CB48F99A
