--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -42,7 +42,16 @@ org.osgi.framework.system.packages= org.osgi.framework; ; version=1.3.0, \
  javax.crypto; \
  javax.crypto.spec; \
  javax.crypto.interfaces; \
- net.java.sip.communicator.util.launchutils
+ net.java.sip.communicator.util.launchutils; \
+ org.bouncycastle.jce.provider; \
+ org.bouncycastle.crypto.digests; \
+ org.bouncycastle.crypto.macs; \
+ org.bouncycastle.crypto.params; \
+ org.bouncycastle.crypto.engines; \
+ gnu.java.zrtp; \
+ gnu.java.zrtp.packets; \
+ gnu.java.zrtp.utils; \
+ gnu.java.zrtp.zidfile
 
 felix.auto.start.10= reference:file:lib/bundle/org.apache.felix.bundlerepository-1.0.0.jar \
  reference:file:lib/bundle/org.apache.felix.servicebinder-0.9.0-SNAPSHOT.jar
