Fixes Jabber tests failing because of missing required system packages.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4491 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.unit.test.properties
+++ b/lib/felix.unit.test.properties
@@ -18,6 +18,8 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  sun.misc; \
  sun.security.action; \
  javax.crypto; \
+ javax.crypto.interfaces; \
+ javax.crypto.spec; \
  javax.xml.parsers;\
  org.apache.xml.serialize;\
  javax.xml.transform;\
@@ -29,9 +31,17 @@ org.osgi.framework.system.packages= org.osgi.framework; \
  javax.sound.sampled; \
  javax.naming; \
  javax.naming.directory; \
- javax.crypto.spec; \
  javax.net; \
- javax.net.ssl;
+ javax.net.ssl; \
+ org.bouncycastle.jce.provider; \
+ org.bouncycastle.crypto.digests; \
+ org.bouncycastle.crypto.macs; \
+ org.bouncycastle.crypto.params; \
+ org.bouncycastle.crypto.engines; \
+ gnu.java.zrtp; \
+ gnu.java.zrtp.packets; \
+ gnu.java.zrtp.utils; \
+ gnu.java.zrtp.zidfile
 
 #
 # In case you want testing to run using oscar's graphical ui then uncomment
@@ -80,6 +90,7 @@ felix.auto.start.5= \
  reference:file:sc-bundles/protocol-sip.jar \
  reference:file:sc-bundles/protocol-yahoo.jar \
  reference:file:sc-bundles/protocol-gibberish.jar \
+ reference:file:sc-bundles/protocol-mock.jar \
  reference:file:sc-bundles/meta-cl.jar \
  reference:file:sc-bundles/msghistory.jar \
  reference:file:sc-bundles/callhistory.jar
@@ -87,8 +98,6 @@ felix.auto.start.5= \
 felix.auto.start.6= \
  reference:file:sc-bundles/slickless.jar \
  reference:file:sc-bundles/configuration-slick.jar \
- reference:file:sc-bundles/protocol.jar \
- reference:file:sc-bundles/protocol-mock.jar \
  reference:file:sc-bundles/media-slick.jar \
  reference:file:sc-bundles/netaddr-slick.jar \
  reference:file:sc-bundles/fileaccess-slick.jar \
