Include lib/bundle in the Windows MSI.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4493 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/build.xml
+++ b/resources/install/build.xml
@@ -373,6 +373,13 @@
                 <include name="logging.properties" />
             </fileset>
         </copy>
+        <mkdir dir="${light.dir}/lib/bundle" />
+        <copy todir="${light.dir}/lib/bundle" overwrite="true">
+            <fileset dir="${sc.basedir}/lib/bundle">
+                <include name="*.jar" />
+                <exclude name="junit.jar" />
+            </fileset>
+        </copy>
         <mkdir dir="${light.dir}/native" />
         <copy todir="${light.dir}/native" overwrite="true">
             <fileset dir="${sc.basedir}/lib/native/windows">
