--- a/lib/logging.properties
+++ b/lib/logging.properties
@@ -62,7 +62,7 @@ net.sf.cindy.impl.level = SEVERE
 
 # But we want everything coming from the sip-comm
 net.java.sip.communicator.level = WARNING
-net.java.sip.communicator.impl.protocol.sip.level = FINEST
+net.java.sip.communicator.impl.protocol.sip.level = WARNING
 
 # For example, set the com.xyz.foo logger to only log SEVERE
 # messages:
