Arrow added to the presence selector box.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4506 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/config/defaults.properties
+++ b/resources/config/defaults.properties
@@ -22,6 +22,8 @@ preferredAccountWizard=
 tabOverlap=10
 mainWindowWidth=250
 mainWindowHeight=600
+minMainWindowWidth=100
+minMainWindowHeight=400
 chatWindowWidth=500
 chatWindowHeight=400
 logoBarWidth=0
