--- a/resources/images/images.properties
+++ b/resources/images/images.properties
@@ -182,6 +182,8 @@ LEAVE_ICON=resources/images/impl/gui/common/leave.png
 
 STATUS_SEPARATOR_ICON=resources/images/impl/gui/common/statusSeparator.png
 
+MORE_BUTTON=resources/images/impl/gui/buttons/moreButton.png
+
 TOOL_BAR_BACKGROUND=resources/images/impl/gui/common/toolbarBackground.png
 MENU_BACKGROUND=resources/images/impl/gui/common/menuBackground.png
 WINDOW_TITLE_BAR=resources/images/impl/gui/common/windowTitleBarBackground.png
