Hardcodes the Product Id of the Windows MSI in order to have its different builds recognized as one and the same product.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4511 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/build.xml
+++ b/resources/install/build.xml
@@ -433,6 +433,7 @@
         <filter token="APP_NAME" value="${application.name}" />
         <filter token="APP_WEB" value="${application.web}" />
     	<filter token="WINDOWS_JRE_FILE" value="${windows.jre.file}" />
+        <filter token="WIX_PRODUCT_ID" value="${wix.product.id}" />
         <filter token="WIX_UPGRADE_CODE" value="${wix.upgrade.code}" />
         <copy
                 file="${inst.resrc}/windows/installer-windows.wxs"
