--- a/resources/images/images.properties
+++ b/resources/images/images.properties
@@ -183,6 +183,7 @@ LEAVE_ICON=resources/images/impl/gui/common/leave.png
 STATUS_SEPARATOR_ICON=resources/images/impl/gui/common/statusSeparator.png
 
 MORE_BUTTON=resources/images/impl/gui/buttons/moreButton.png
+COMBO_BOX_ARROW=resources/images/impl/gui/buttons/comboBoxArrow.png
 
 TOOL_BAR_BACKGROUND=resources/images/impl/gui/common/toolbarBackground.png
 MENU_BACKGROUND=resources/images/impl/gui/common/menuBackground.png
