Uses a different name for the Windows Installer-based EXE in order to allow the building of it and the IzPack base simultaneously.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4520 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/build.xml
+++ b/resources/install/build.xml
@@ -484,7 +484,7 @@
                 dir="${light.dir}"
                 failonerror="true">
             <arg value="-out" />
-            <arg value="${windows.app.dir}\${package.name}-${sip-communicator.version}.exe" />
+            <arg value="${windows.app.dir}\${package.name}-${sip-communicator.version}-msi.exe" />
             <arg value="-mps" />
             <arg value="${windows.app.dir}\tmp\setup.msi" />
             <arg value="-setup" />
@@ -493,7 +493,7 @@
         <exec executable="mt.exe" dir="${windows.app.dir}" failonerror="true">
             <arg value="-manifest" />
             <arg value="${inst.resrc}\windows\setup.exe.manifest" />
-            <arg value="-outputresource:${package.name}-${sip-communicator.version}.exe;#1" />
+            <arg value="-outputresource:${package.name}-${sip-communicator.version}-msi.exe;#1" />
         </exec>
 
         <delete dir="${light.dir}" />
