--- a/resources/install/build.xml
+++ b/resources/install/build.xml
@@ -432,12 +432,17 @@
         <filter token="APP_EMAIL" value="${application.email}" />
         <filter token="APP_NAME" value="${application.name}" />
         <filter token="APP_WEB" value="${application.web}" />
+        <filter token="WelcomeText3" value="${installer.welcome.wtext3}" />
     	<filter token="WINDOWS_JRE_FILE" value="${windows.jre.file}" />
         <filter token="WIX_PRODUCT_ID" value="${wix.product.id}" />
         <filter token="WIX_UPGRADE_CODE" value="${wix.upgrade.code}" />
         <copy
                 file="${inst.resrc}/windows/installer-windows.wxs"
                 tofile="${windows.app.dir}/tmp/installer-windows.wxs"
+                filtering="yes" />
+        <copy
+                file="${inst.resrc}/windows/en-us.wxl"
+                tofile="${windows.app.dir}/tmp/en-us.wxl"
                 filtering="yes" />
 
         <!-- Execute candle.exe -->
@@ -473,6 +478,9 @@
             <arg value="WixUIExtension" />
             <arg value="-ext" />
             <arg value="WixUtilExtension" />
+            <arg value="-cultures:en-us" />
+            <arg value="-loc" />
+            <arg value="${windows.app.dir}\tmp\en-us.wxl" />
             <arg value="-out" />
             <arg value="${windows.app.dir}\tmp\setup.msi" />
             <arg value="${windows.app.dir}\tmp\installer-windows.wixobj" />
