Makes the background of the launch checkbox on the last dialog of the MSI setup transparent.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4526 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/build.xml
+++ b/resources/install/build.xml
@@ -502,6 +502,8 @@
             <arg value="200" />
         	<arg value="/n" />
         	<arg value="${application.name}" />
+        	<arg value="/o" />
+        	<arg value="INSTALL" />
         	<arg value="/d" />
             <arg value="setup.msi" />
         	<arg value="/b" />
