Removes msistuff.exe because it's part of the Platform SDK and doesn't belong in the repository.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4527 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/build.xml
+++ b/resources/install/build.xml
@@ -494,7 +494,7 @@
                 todir="${windows.app.dir}/tmp"
                 overwrite="true" />
         <exec
-                executable="${inst.resrc}\windows\msistuff.exe"
+                executable="msistuff.exe"
                 dir="${windows.app.dir}/tmp"
                 failonerror="true">
             <arg value="setup.exe" />
