Uses SCRegistrySpec.wxi in the MSI setup just like SCRegistrySpec.xml in IzPack.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4531 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/install/build.xml
+++ b/resources/install/build.xml
@@ -439,13 +439,15 @@
         <filter token="WIX_PRODUCT_ID" value="${wix.product.id}" />
         <filter token="WIX_UPGRADE_CODE" value="${wix.upgrade.code}" />
         <copy
-                file="${inst.resrc}/windows/installer-windows.wxs"
-                tofile="${windows.app.dir}/tmp/installer-windows.wxs"
-                filtering="yes" />
-        <copy
-                file="${inst.resrc}/windows/en-us.wxl"
-                tofile="${windows.app.dir}/tmp/en-us.wxl"
-                filtering="yes" />
+                todir="${windows.app.dir}/tmp"
+                overwrite="true"
+                filtering="yes">
+            <fileset dir="${inst.resrc}/windows">
+                <include name="en-us.wxl" />
+                <include name="installer-windows.wxs" />
+                <include name="SCRegistrySpec.wxi" />
+            </fileset>
+        </copy>
 
         <!-- Execute candle.exe -->
         <exec
