Move text indent constants for the about and splash windows to defaults.properties.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4533 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/config/defaults.properties
+++ b/resources/config/defaults.properties
@@ -17,6 +17,8 @@ titleFontSize=14
 isLookAndFeelDecorated=false
 isToolBarExteneded=false
 aboutLogoFontSize=14
+aboutWindowTextIndent=180
+splashScreenTextIndent=190
 defaultGroupName=
 preferredAccountWizard=
 tabOverlap=10
