About window paragraph gap moved to the configuration properties file.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4535 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/config/defaults.properties
+++ b/resources/config/defaults.properties
@@ -16,9 +16,6 @@ fontSize=12
 titleFontSize=14
 isLookAndFeelDecorated=false
 isToolBarExteneded=false
-aboutLogoFontSize=14
-aboutWindowTextIndent=180
-splashScreenTextIndent=190
 defaultGroupName=
 preferredAccountWizard=
 tabOverlap=10
@@ -42,6 +39,10 @@ contactListRowTransparency=200
 isTextureBackground=false
 
 # branding
+aboutLogoFontSize=14
+aboutWindowTextIndent=180
+splashScreenTextIndent=190
+paragraphGap=10
 textStyle=resources/styles/defaultStyle.css
 
 # jabber accregwizz
