Move RSS after metacontactlist
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4537 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/lib/felix.client.run.properties
+++ b/lib/felix.client.run.properties
@@ -98,7 +98,6 @@ felix.auto.start.50= \
  reference:file:sc-bundles/protocol-gibberish.jar \
  reference:file:sc-bundles/protocol-ssh.jar \
  reference:file:sc-bundles/netaddr.jar \
- reference:file:sc-bundles/protocol-rss.jar \
  reference:file:sc-bundles/protocol-zeroconf.jar \
  reference:file:sc-bundles/protocol-irc.jar \
  reference:file:sc-bundles/protocol-dict.jar
@@ -106,6 +105,8 @@ felix.auto.start.50= \
 felix.auto.start.55= \
  reference:file:sc-bundles/meta-cl.jar
 
+felix.auto.start.56= \
+ reference:file:sc-bundles/protocol-rss.jar
 
 felix.auto.start.60= \
  reference:file:sc-bundles/history.jar \
